fix food ingredient contrast

--- a/index.css
+++ b/index.css
@@ -74,7 +74,7 @@ h2 {
 
 .food-ingredient {
     margin: 7px 0px;
-    color: #9F9F7F;
+    color: #555555 ;
     font-size: 1rem;
 }
 .item-price {
